DEBUG: Adjust CorsConfiguration method